kubernetes/apps/ingress/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: kube-system
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "*.${DOMAIN}"
    secretName: "${DOMAIN/./-}-tls"
  rules:
  - host: "hubble.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: hubble-ui            
            port:
              number: 80
        path: /
        pathType: Prefix
        namespace: kube-system
